--- a/src/main/resources/static/tables.html
+++ b/src/main/resources/static/tables.html
@@ -376,25 +376,13 @@
                         </div>
                         <div class="card-body">
                             <div class="table-responsive">
-                                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                <table class="table table-bordered" id="empresas" width="100%" cellspacing="0">
                                     <thead>
                                         <tr>
+                                            <th>id</th>
                                             <th>Rut Empresa</th>
-                                            <th>Etapa</th>
+                                            <th>Razon Social</th>
                                             <th>Fecha Ingreso</th>
-                                            <th>Fecha nda</th>
-                                            <th>Fecha Acceso Herramienta</th>
-                                            <th>Fecha Creacion Formulario</th>
-                                            <th>Fecha envio Formulario</th>
-                                            <th>Fecha Demostracion</th>
-                                            <th>Fecha Entrega Inf Evaluadores</th>
-                                            <th>Fecha Entrega Informe</th>
-                                            <th>Fecha Entrega Evidencia Final</th>
-                                            <th>Fecha Entrega Evidencia Fonasa</th>
-                                            <th>Fecha Integracion Fonasa</th>
-                                            <th>Fecha Otorgamiento</th>
-                                            <th>Timelapse</th>
-                                            <th>Informe hasta entrega del sello</th>
                                         </tr>
                                     </thead>
                                     <!--   <tfoot>
@@ -408,40 +396,7 @@
                                            </tr>
                                        </tfoot>-->
                                     <tbody>
-                                        <tr>
-                                            <td>707767768</td>
-                                            <td>Realizando Mejora</td>
-                                            <td>20/10/2023</td>
-                                            <td>20/10/2023</td>
-                                            <td>20/10/2023</td>
-                                            <td>20/10/2023</td>
-                                            <td>20/10/2023</td>
-                                            <td>20/10/2023</td>
-                                            <td>20/10/2023</td>
-                                            <td>20/10/2023</td>
-                                            <td>20/10/2023</td>
-                                            <td>20/10/2023</td>
-                                            <td>20/10/2023</td>
-                                            <td>20/10/2023</td>
 
-                                        </tr>
-                                        <tr>
-                                            <td>700557778</td>
-                                            <td>Realizando Formulario</td>
-                                            <td>06/10/2023</td>
-                                            <td>06/10/2023</td>
-                                            <td>06/10/2023</td>
-                                            <td>06/10/2023</td>
-                                            <td>06/10/2023</td>
-                                            <td>06/10/2023</td>
-                                            <td>06/10/2023</td>
-                                            <td>06/10/2023</td>
-                                            <td>06/10/2023</td>
-                                            <td>06/10/2023</td>
-                                            <td>06/10/2023</td>
-                                            <td>06/10/2023</td>
-
-                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
@@ -511,6 +466,8 @@
 
     <!-- Page level custom scripts -->
     <script src="js/demo/datatables-demo.js"></script>
+
+    <script src="js/empresas..js"></script>
 
 </body>
 
