cambios para iniciar sesion

--- a/src/main/resources/static/tables.html
+++ b/src/main/resources/static/tables.html
@@ -467,7 +467,7 @@
     <!-- Page level custom scripts -->
     <script src="js/demo/datatables-demo.js"></script>
 
-    <script src="js/empresas..js"></script>
+    <script src="js/empresas.js"></script>
 
 </body>
 
