--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -36,6 +36,10 @@
                                 <h1 class="h4 text-gray-900 mb-4">Crear una cuenta!</h1>
                             </div>
                             <form class="user">
+                                <div class="form-group">
+                                    <input type="text" class="form-control form-control-user" id="txtRun"
+                                           placeholder="RUN">
+                                </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
                                         <input type="text" class="form-control form-control-user" id="txtNombre"
