--- a/src/main/resources/static/tables.html
+++ b/src/main/resources/static/tables.html
@@ -455,6 +455,8 @@
     <!-- Page level custom scripts -->
     <script src="js/demo/datatables-demo.js"></script>
 
+    <script src="https://unpkg.com/ionicons@latest/dist/ionicons.js"></script>
+
     <script src="js/ambito.js"></script>
 
     <script>
