Se mejoró index.html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,27 +36,6 @@
             </a><br>
 
 
-            <!-- Heading -->
-            <div class="sidebar-heading">
-                Interface
-            </div>
-
-            <!-- Nav Item - Pages Collapse Menu -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Components</span>
-                </a>
-                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-                    <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
-                        <a class="collapse-item" href="buttons.html">Buttons</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
-                    </div>
-                </div>
-            </li>
-
             <!-- Nav Item - Utilities Collapse Menu -->
             <!--
             <li class="nav-item">
@@ -119,37 +98,16 @@
                         <h6 class="collapse-header">Tablas:</h6>
                         <a class="collapse-item" href="tabla-ambito.html"><i class="fas fa-fw fa-table"></i>
                             <span>Ámbitos</span></a>
-                        <a class="collapse-item" href="register.html">Register</a>
-                        <a class="collapse-item" href="forgot-password.html">Forgot Password</a>
-                        <div class="collapse-divider"></div>
-                        <h6 class="collapse-header">Other Pages:</h6>
-                        <a class="collapse-item" href="404.html">404 Page</a>
-                        <a class="collapse-item" href="blank.html">Blank Page</a>
-                        <a class="collapse-item" href="ambito.html">Agregar Ambito</a>
+                        <a class="collapse-item" href="tabla-sello.html"><i class="fas fa-fw fa-table"></i>
+                            <span>Sellos</span></a>
+                        <a class="collapse-item" href="tabla-empresa.html"><i class="fas fa-fw fa-table"></i>
+                            <span>Empresas</span></a>
+                        <h6 class="collapse-header">Otrás páginas:</h6>
+                        <a class="collapse-item" href="nota.html">Agregar Calificación</a>
+                        <a class="collapse-item" href="subambito.html">Agregar Subámbito</a>
                     </div>
                 </div>
             </li>
-
-            <!-- Nav Item - Charts -->
-            <li class="nav-item">
-                <a class="nav-link" href="charts.html">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Charts</span></a>
-            </li>
-
-            <!-- Nav Item - Tablas -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Ambitos</span></a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Empresa</span></a>
-            </li>
-
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
