--- a/src/main/resources/static/nota.html
+++ b/src/main/resources/static/nota.html
@@ -24,15 +24,11 @@
             <div class="text-center">
               <h1 class="h4 text-gray-900 mb-4">Calificación</h1>
             </div>
-            <form class="user">
-              <div class="form-group">
-                <input type="number" class="form-control form-control-user" id="nmbCalificacion"
-                       placeholder="Calificaión">
-              </div>
-              <a onclick="crearNotas()" href="#" class="btn btn-primary btn-user btn-block">
-                Mandar Calificación
-              </a>
-            </form>
+              <h3>Seleccione la entidad de la que quiere llenar notas</h3>
+              <select id="entidadSelect" >
+
+              </select>
+
           </div>
 
         </div>
@@ -43,6 +39,25 @@
 
   </div>
 
+</div>
+<div class="container">
+  <div class="card o-hidden border-0 shadow-lg my-5">
+    <div class="card-body p-0">
+      <div class="row">
+        <div class="col-lg">
+          <div class="p-5">
+            <div class="text-center">
+              <h1 class="h4 text-gray-900 mb-4">Evaluacion</h1>
+              <form action="guardarNotas.html" id="formNotas">
+                <table id="tablaSubAmbitos"></table>
+                <button id="botonGuardar" style="visibility: hidden">Guardar</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <!-- Bootstrap core JavaScript-->
@@ -56,6 +71,6 @@
 <script src="js/sb-admin-2.min.js"></script>
 
 <script src="js/nota.js"></script>
-
+<script src="js/entidadEvaluadora.js"></script>
 </body>
 </html>
